fixing arrays and multiple PolyValue as well as PolyType errors and tests in Neo4j